Prevent overflow from left column block
Former-commit-id: fd3890a59c31622facd9c95d59dcdb7039727aad

--- a/public/css/base/base.css
+++ b/public/css/base/base.css
@@ -343,7 +343,7 @@ a:active {
     column-gap: 4em;
     column-rule-style: solid;
   }
-  .content-right {
+  .content-left, .content-right {
     /* Prevents breaking across the column */
     display: inline-block;
   }
